--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>eternal Maven Webapp</name>
   <url>http://maven.apache.org</url>
+  
+	<properties>
+    	<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
+	</properties>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -23,13 +29,14 @@
 	    <scope>provided</scope>
 	</dependency>
 
-	
-	<!-- https://mvnrepository.com/artifact/org.hibernate.javax.persistence/hibernate-jpa-2.1-api -->
+	<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
 	<dependency>
-	    <groupId>org.hibernate.javax.persistence</groupId>
-	    <artifactId>hibernate-jpa-2.1-api</artifactId>
-	    <version>1.0.2.Final</version>
+	    <groupId>org.hibernate</groupId>
+	    <artifactId>hibernate-core</artifactId>
+	    <version>5.4.1.Final</version>
+	    <scope>provided</scope>
 	</dependency>
+
 	
 	<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-api -->
 	<dependency>
@@ -38,7 +45,14 @@
 	    <version>2.2.18</version>
 	</dependency>
 	
-		
+	<!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+	<dependency>
+	    <groupId>com.h2database</groupId>
+	    <artifactId>h2</artifactId>
+	    <version>1.4.197</version>
+	    <scope>runtime</scope>
+	</dependency>
+	
 	    
   </dependencies>
   <build>
