First Stage of refactoring.
Changed the app to an 'singlepage' except admin till now.
Restructured jsf organization.
Added font-awesome and Open Sans to project

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,10 @@
 /.settings
 **/images/*
 
+**/fonts/*
+**/font-awesome/css/*
+**/font-awesome/webfonts/*
+
+!**/fonts/readme.txt
+!**/font-awesome/css/readme.txt
+!**/font-awesome/webfonts/readme.txt
