fixed css setup

--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,8 @@
 
 !**/fonts/readme.txt
 !**/font-awesome/css/readme.txt
+!**/font-awesome/css/solid.css
+!**/font-awesome/css/regular.css
 !**/font-awesome/webfonts/readme.txt
+
+
